--- a/src/CertificateCreator/CertificateCreator.csproj
+++ b/src/CertificateCreator/CertificateCreator.csproj
@@ -7,5 +7,8 @@
     <Nullable>enable</Nullable>
     <StartupObject>CertificateCreator.Program</StartupObject>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
-  </PropertyGroup>
+</PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="../CertificateLib/CertificateLib.csproj" />
+  </ItemGroup>
 </Project>
